--- a/Azure_Policy_Compliance_Scan.yaml
+++ b/Azure_Policy_Compliance_Scan.yaml
@@ -1,17 +1,25 @@
-on:
-  schedule:
-    - cron:  '0 8 * * *'  # runs every morning 8am
-jobs:
-  assess-policy-compliance:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Login to Azure
-      uses: azure/login@v1
-      with:
-        creds: ${{secrets.AZURE_CREDENTIALS}}
+name: Run Azure Login with OIDC
+on: [push]
 
-    - name: Check for resource compliance
-      uses: azure/policy-compliance-scan@v0
-      with:
-        scopes: |
-          /subscriptions/xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+permissions:
+      id-token: write
+      contents: read
+      
+jobs: 
+  Windows-latest:
+      runs-on: windows-latest
+      steps:
+        - name: OIDC Login to Azure Public Cloud with AzPowershell (enableAzPSSession true)
+          uses: azure/login@v1
+          with:
+            client-id: ${{ secrets.AZURE_CLIENT_ID }}
+            tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+            subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }} 
+            enable-AzPSSession: true
+
+        - name: 'Get RG with powershell action'
+          uses: azure/powershell@v1
+          with:
+             inlineScript: |
+               Get-AzResourceGroup
+             azPSVersion: "latest"
