--- a/.github/workflows/ComplianceScan-VSESub-Daily8AM.yml
+++ b/.github/workflows/ComplianceScan-VSESub-Daily8AM.yml
@@ -1,6 +1,10 @@
 on:
   schedule:
     - cron:  '0 8 * * *'  # runs every morning 8am
+    
+permissions:
+      id-token: write # This is required for requesting the JWT
+      contents: read # This is required for actions/checkout
 jobs:
   assess-policy-compliance:
     runs-on: ubuntu-latest
@@ -8,7 +12,9 @@ jobs:
     - name: Login to Azure
       uses: azure/login@v1
       with:
-        creds: ${{secrets.AZURE_CREDENTIALS}}
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     - name: Check for resource compliance
       uses: azure/policy-compliance-scan@v0
