--- a/.github/workflows/ComplianceScan-VSESub-Daily8AM.yml
+++ b/.github/workflows/ComplianceScan-VSESub-Daily8AM.yml
@@ -2,6 +2,9 @@ on:
   schedule:
     - cron:  '0 8 * * *'  # runs every morning 8am
     
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+    
 permissions:
       id-token: write # This is required for requesting the JWT
       contents: read # This is required for actions/checkout
