--- a/.github/workflows/ComplianceScan-VSESub-Daily8AM.yml
+++ b/.github/workflows/ComplianceScan-VSESub-Daily8AM.yml
@@ -3,7 +3,7 @@ on:
     - cron:  '0 8 * * *'  # runs every morning 8am
     
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  #workflow_dispatch:
     
 permissions:
       id-token: write # This is required for requesting the JWT
