--- a/.github/workflows/manage-azure-policy-definitions.yml
+++ b/.github/workflows/manage-azure-policy-definitions.yml
@@ -244,3 +244,5 @@ jobs:
           policies/Deploy_Diagnostic_Settings_for_Cognitive_Services_to_Log_Analytics_workspace_Deploy-Diagnostics-CognitiveServices/**
           policies/Deploy_Diagnostic_Settings_for_CDN_Endpoint_to_Log_Analytics_workspace_Deploy-Diagnostics-CDNEndpoints/**
           policies/Deploy_Diagnostic_Settings_for_Azure_Bastion_to_Log_Analytics_workspace_Deploy-Diagnostics-Bastion/**
+          policies/Deploy_Hybrid_Use_for_SQL_PaaS/**
+          #test
