--- a/.github/workflows/ComplianceScan-VSESub-Daily8AM.yml
+++ b/.github/workflows/ComplianceScan-VSESub-Daily8AM.yml
@@ -1,6 +1,6 @@
 on:
-  schedule:
-    - cron:  '0 20 * * *'  # runs every morning 8am
+  #schedule:
+  #  - cron:  '0 20 * * *'  # runs every morning 8am
     
   # Allows you to run this workflow manually from the Actions tab
   #workflow_dispatch:
